manifiesto/objects/Servicio_Web__mdt.object
<CustomObject>
    <fields>
        <fullName>Ambiente__c</fullName>
        <label>Ambiente</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contrasena__c</fullName>
        <label>Contraseña</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usuario__c</fullName>
        <label>Usuario</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Servicio Web</label>
    <pluralLabel>Servicios Web</pluralLabel>
</CustomObject>